@@ -114,6 +114,7 @@
  - [DS-104] Cancel/save button during edit of a workflow item doesn't work
  - [DS-105] Initial Questions button in the progress bar doesn't work in workflow
  - [DS-106] Save & exit button doesn't properly work in workflow
+ - [DS-126] Request to [dspace-base-url]/bitstream throw NPE
  
 (Paulo Jobim)
  - SF Patch [2655052] Authors re-ordered when item edited (xmlui)
